force-app/main/default/objects/Account/fields/Active1__c.field-meta.xml
<CustomField>
    <fullName>Active1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active1</label>
    <type>Checkbox</type>
</CustomField>