force-app/main/default/objects/Account/fields/CNUM__c.field-meta.xml
<CustomField>
    <fullName>CNUM__c</fullName>
    <label>CNUM</label>
    <length>12</length>
    <type>Text</type>
</CustomField>