force-app/main/default/objects/Account/fields/External_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>