force-app/main/default/objects/Account/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>"Kiran"</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>