force-app/main/default/objects/Account/fields/Founding_Date__c.field-meta.xml
<CustomField>
    <fullName>Founding_Date__c</fullName>
    <label>Founding Date</label>
    <type>Date</type>
</CustomField>