force-app/main/default/objects/Account/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <label>Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>