force-app/main/default/objects/Account/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <label>Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>