force-app/main/default/objects/Account/fields/TotalOpp__c.field-meta.xml
<CustomField>
    <fullName>TotalOpp__c</fullName>
    <label>TotalOpp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>